$Id: History,v 1.39 2000-01-22 13:46:57 stesting Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

21st January 2000  John Allison
- Added large_N.in files in examples/novice.
- Temporarily reduced no of events in N04  due to slow 10 Tev muons.

20th January 2000  John Allison
- Tagged extended/electromagnetic testem-V01-00-00.
  o implemented G4NOHIST (Michel Maire).
  o new TestEm6 (low energy): TestEm6.in contains protons, anti_protons,
    ionC12 (Vladimir Ivanchenko).

13th January 2000  John Allison  (examples-V01-00-00)
- N02, N03: Introduced ExN0nSteppingVerbose (Michel Maire).
- N04: Introduced 10 TeV mu- in exampleN04.EMtest.in (John Apostolakis).
- N05, N06: (Gabriele Cosmo):
  Replaced #include "G4Timer.hh" by class G4Timer in ExN0nRunAction.hh.
  Added #include "G4Timer.hh" as first #include in ExN0nRunAction.cc.
- Updated PersistentEx01.out and PersistentEx02.out for geant4-01-00-ref-01/2.
- N02, N03, N04, N04.EMtest, N05, N06: updated .out files for -ref-02.
- N04.EMtest.in: reduced number of events from 100 to 10 for 10 TeV mu-.

7th December 1999  John Allison  (examples-V00-01-19)
- Updated novice .out files to geant4-01-00.

6th December 1999  John Allison  (examples-V00-01-18)