@@ -5,7 +5,7 @@
 // based on the Program) you indicate your acceptance of this statement,
 // and all its terms.
 //
-// $Id: ExN02EventAction.cc,v 1.3 1999-12-15 14:49:21 gunter Exp $
+// $Id: ExN02EventAction.cc,v 1.4 2000-01-24 14:45:51 stesting Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 // 
@@ -32,14 +32,19 @@ void ExN02EventAction::BeginOfEventAction(const G4Event*)
 
 void ExN02EventAction::EndOfEventAction(const G4Event* evt)
 {
-  G4cout << ">>> Event " << evt->GetEventID() << G4endl;
-  
+  G4int event_id = evt->GetEventID();
+
   G4TrajectoryContainer * trajectoryContainer = evt->GetTrajectoryContainer();
   G4int n_trajectories = 0;
-  if(trajectoryContainer)
-  { n_trajectories = trajectoryContainer->entries(); }
-  G4cout << "    " << n_trajectories 
-       << " trajectories stored in this event." << G4endl;
+  if (trajectoryContainer) n_trajectories = trajectoryContainer->entries();
+
+  if (event_id < 100 || event_id%100 == 0) {
+
+    G4cout << ">>> Event " << evt->GetEventID() << G4endl;
+  
+    G4cout << "    " << n_trajectories 
+	   << " trajectories stored in this event." << G4endl;
+  }
 
   G4VVisManager* pVVisManager = G4VVisManager::GetConcreteInstance();
 
@@ -49,6 +54,3 @@ void ExN02EventAction::EndOfEventAction(const G4Event* evt)
     { (*(evt->GetTrajectoryContainer()))[i]->DrawTrajectory(50); }
   }
 }
-
-
-
